--- a/styles/index.css
+++ b/styles/index.css
@@ -9,16 +9,39 @@ body {
   min-height: 100vh;
   font-family: "Roboto",sans-serif;
 }
+.container {
+  max-width: 90%;
+}
 
 .header{
   background-color: var(--main-background-color);
   min-height: 100px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+.nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .main {
-  flex-grow: 1; /* Этот элемент будет занимать оставшееся пространство внутри контейнера body */
+  flex-grow: 1;
 }
 .footer {
   background-color: var(--main-background-color);
   min-height: 50px;
+  padding: 10px;
+}
+
+.button {
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  max-height: 35px;
+}
+.button:hover{
+  cursor: pointer;
 }
